src/objects/FisheriesLicense__c.object
<CustomObject>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FisheriesContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fisheries Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fisheries Licenses</relationshipLabel>
        <relationshipName>FisheriesLicenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FisheriesLicenseNumber__c</fullName>
        <externalId>true</externalId>
        <label>Fisheries License Number</label>
        <length>24</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FisheriesOrder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fisheries Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Fisheries Licenses</relationshipLabel>
        <relationshipName>FisheriesLicenses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <label>Fisheries License</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>FisheriesLicenseNumber__c</columns>
        <columns>FisheriesOrder__c</columns>
        <columns>FisheriesContact__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VFL-{0000000}</displayFormat>
        <label>Fisher License Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fisheries Licenses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>